Added the second problem, Enter numbers, although the description is not very comprehensive

--- a/Fundamental/OOP/03. Exception_Handling/Exception_Hanglind/EnterNumbers/EnterNumbers.csproj
+++ b/Fundamental/OOP/03. Exception_Handling/Exception_Hanglind/EnterNumbers/EnterNumbers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BCC621EB-CDEB-406D-A5FA-8DAD13AC053D}</ProjectGuid>
+    <ProjectGuid>{C028078F-62A3-4A03-9511-776790EC2EDC}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MathSqr</RootNamespace>
-    <AssemblyName>MathSqr</AssemblyName>
+    <RootNamespace>EnterNumbers</RootNamespace>
+    <AssemblyName>EnterNumbers</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MathSquareRoot.cs" />
+    <Compile Include="Numbers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
