--- a/Fundamental/OOP/05.Capsulation_And_Polymorphism/Encapsulation_Polymorphism/Bank/Bank.csproj
+++ b/Fundamental/OOP/05.Capsulation_And_Polymorphism/Encapsulation_Polymorphism/Bank/Bank.csproj
@@ -43,6 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
+    <Compile Include="CorporateCustomer.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="DepositAccount.cs" />
+    <Compile Include="IDepositable.cs" />
+    <Compile Include="Individual.cs" />
+    <Compile Include="IinterestCalculatable.cs" />
+    <Compile Include="IWithdrawable.cs" />
+    <Compile Include="LoanAccount.cs" />
+    <Compile Include="MortgageAccount.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
